fix: change liability routes
