# functions/src/routes/PatrimonialManagementRoutes.ts
@@ -1,16 +1,43 @@
-import { CreateAssetItemDTO, CreateLiabilityItemDTO, CreateTangibleGoodsItemDTO, DeletePatrimonialItemDTO, UpdateAssetItemDTO, UpdateLiabilityItemDTO, UpdateTangibleGoodsItemDTO } from "../dto/PatrimonialManagementDTO";
-import { AssetItem, LiabilityItem, TangibleGoodsItem } from "../models/PatrimonialManagement";
+import {
+  CreateAssetItemDTO,
+  CreateLiabilityItemDTO,
+  CreateTangibleGoodsItemDTO,
+  DeletePatrimonialItemDTO,
+  UpdateAssetItemDTO,
+  UpdateLiabilityItemDTO,
+  UpdateTangibleGoodsItemDTO,
+} from "../dto/PatrimonialManagementDTO";
+import {
+  AssetItem,
+  LiabilityItem,
+  TangibleGoodsItem,
+} from "../models/PatrimonialManagement";
 import { PatrimonialManagementService } from "../services/PatrimonialManagementService";
 import { createAuthenticatedRoute } from "../utils/routeWrapper";
 
 export const patrimonialManagementRoutes = {
-  create: createAuthenticatedRoute<CreateAssetItemDTO | CreateTangibleGoodsItemDTO, AssetItem | TangibleGoodsItem>(
+  create: createAuthenticatedRoute<
+    CreateAssetItemDTO | CreateTangibleGoodsItemDTO | CreateLiabilityItemDTO,
+    AssetItem | TangibleGoodsItem | LiabilityItem
+  >(
     async (request) => {
+      if (request.data && (request.data as any).category === "Liability") {
+        return await PatrimonialManagementService.createLiability(
+          request.uid,
+          request.data as CreateLiabilityItemDTO
+        );
+      }
       if ("AssetType" in request.data) {
-        return await PatrimonialManagementService.createAsset(request.uid, request.data as CreateAssetItemDTO);
+        return await PatrimonialManagementService.createAsset(
+          request.uid,
+          request.data as CreateAssetItemDTO
+        );
       }
       if ("type" in request.data) {
-        return await PatrimonialManagementService.createTangibleGoods(request.uid, request.data as CreateTangibleGoodsItemDTO);
+        return await PatrimonialManagementService.createTangibleGoods(
+          request.uid,
+          request.data as CreateTangibleGoodsItemDTO
+        );
       }
       throw new Error("Tipo de item patrimonial não reconhecido.");
     },
@@ -20,38 +47,30 @@ export const patrimonialManagementRoutes = {
     }
   ),
 
-  createLiability: createAuthenticatedRoute<CreateLiabilityItemDTO, LiabilityItem>(
+  update: createAuthenticatedRoute<
+    UpdateAssetItemDTO | UpdateTangibleGoodsItemDTO | UpdateLiabilityItemDTO,
+    AssetItem | TangibleGoodsItem | LiabilityItem
+  >(
     async (request) => {
-      return await PatrimonialManagementService.createLiability(request.uid, request.data);
-    },
-    {
-      successMessage: "Dívida criada com sucesso",
-      requireData: true,
-    }
-  ),
-
-  update: createAuthenticatedRoute<UpdateAssetItemDTO | UpdateTangibleGoodsItemDTO, AssetItem | TangibleGoodsItem>(
-    async (request) => {
+      if (request.data && (request.data as any).category === "Liability") {
+        return await PatrimonialManagementService.updateLiability(request.uid, request.data as UpdateLiabilityItemDTO);
+      }
       if ("AssetType" in request.data) {
-        return await PatrimonialManagementService.updateAsset(request.uid, request.data as UpdateAssetItemDTO);
+        return await PatrimonialManagementService.updateAsset(
+          request.uid,
+          request.data as UpdateAssetItemDTO
+        );
       }
       if ("type" in request.data) {
-        return await PatrimonialManagementService.updateTangibleGoods(request.uid, request.data as UpdateTangibleGoodsItemDTO);
+        return await PatrimonialManagementService.updateTangibleGoods(
+          request.uid,
+          request.data as UpdateTangibleGoodsItemDTO
+        );
       }
       throw new Error("Tipo de item patrimonial não reconhecido.");
     },
     {
       successMessage: "Item patrimonial atualizado com sucesso",
-      requireData: true,
-    }
-  ),
-
-  updateLiability: createAuthenticatedRoute<UpdateLiabilityItemDTO, LiabilityItem>(
-    async (request) => {
-      return await PatrimonialManagementService.updateLiability(request.uid, request.data);
-    },
-    {
-      successMessage: "Dívida atualizada com sucesso",
       requireData: true,
     }
   ),
@@ -66,22 +85,15 @@ export const patrimonialManagementRoutes = {
     }
   ),
 
-  getAllAssets: createAuthenticatedRoute<void, (AssetItem | TangibleGoodsItem)[]>(
+  getAll: createAuthenticatedRoute<
+    void,
+    (AssetItem | TangibleGoodsItem | LiabilityItem)[]
+  >(
     async (request) => {
-      return await PatrimonialManagementService.getAllAssets(request.uid);
+      return await PatrimonialManagementService.getAll(request.uid);
     },
     {
       successMessage: "Itens patrimoniais recuperados com sucesso",
-      requireData: false,
-    }
-  ),
-
-  getAllLiabilities: createAuthenticatedRoute<void, LiabilityItem[]>(
-    async (request) => {
-      return await PatrimonialManagementService.getAllLiabilities(request.uid);
-    },
-    {
-      successMessage: "Dívidas recuperadas com sucesso",
       requireData: false,
     }
   ),
